objects/Product_Lines_Detail__c.object
<CustomObject>
    <description>This object is used for displaying the tables of products in the templates for Binding and Non Binding Quotations.</description>
    <fields>
        <fullName>APTS_List_Price_EUR__c</fullName>
        <formula>IF( 
List_Price__c&gt;= 1000000, 
TEXT(FLOOR(List_Price__c/ 1000000)) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
IF( 
List_Price__c&gt;= 1000, 
RIGHT(TEXT(FLOOR(List_Price__c/ 1000)), 3) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(List_Price__c)), 3) &amp; &quot;,&quot; &amp; 
IF( 
MOD(List_Price__c, 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD(List_Price__c, 1), 2) * 100), 
TEXT(MIN(ROUND(MOD(List_Price__c, 1), 2) * 100, 99)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price EUR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Total_List_Price_EUR__c</fullName>
        <formula>IF( 
Total_List_Price__c&gt;= 1000000, 
TEXT(FLOOR(Total_List_Price__c/ 1000000)) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
IF( 
Total_List_Price__c&gt;= 1000, 
RIGHT(TEXT(FLOOR(Total_List_Price__c/ 1000)), 3) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Total_List_Price__c)), 3) &amp; &quot;,&quot; &amp; 
IF( 
MOD(Total_List_Price__c, 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD(Total_List_Price__c, 1), 2) * 100), 
TEXT(MIN(ROUND(MOD(Total_List_Price__c, 1), 2) * 100, 99)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total List Price EUR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Hierarchy_Line__c</fullName>
        <label>Custom Hierarchy Line</label>
        <referenceTo>Custom_Hierarchy_Line__c</referenceTo>
        <relationshipLabel>Product Lines Details</relationshipLabel>
        <relationshipName>product_lines_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetPrice_EUR__c</fullName>
        <description>EP-4.1- This field is used in templates</description>
        <label>NetPrice EUR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Price_EUR__c</fullName>
        <formula>IF( 
Net_Price__c&gt;= 1000000, 
TEXT(FLOOR(Net_Price__c/ 1000000)) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
IF( 
Net_Price__c&gt;= 1000, 
RIGHT(TEXT(FLOOR(Net_Price__c/ 1000)), 3) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Net_Price__c)), 3) &amp; &quot;,&quot; &amp; 
IF( 
MOD(Net_Price__c, 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD(Net_Price__c, 1), 2) * 100), 
TEXT(MIN(ROUND(MOD(Net_Price__c, 1), 2) * 100, 99)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Price EUR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Price__c</fullName>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <label>Product ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Product Lines Details</relationshipLabel>
        <relationshipName>Product_Lines_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_List_Price__c</fullName>
        <description>This field is used to populate total list price which is used in non-binding Template (CR-17010)</description>
        <label>Total List Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Net_Sales_Price_EUR__c</fullName>
        <formula>IF( 
Total_Net_Sales_Price__c&gt;= 1000000, 
TEXT(FLOOR(Total_Net_Sales_Price__c/ 1000000)) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
IF( 
Total_Net_Sales_Price__c&gt;= 1000, 
RIGHT(TEXT(FLOOR(Total_Net_Sales_Price__c/ 1000)), 3) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Total_Net_Sales_Price__c)), 3) &amp; &quot;,&quot; &amp; 
IF( 
MOD(Total_Net_Sales_Price__c, 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD(Total_Net_Sales_Price__c, 1), 2) * 100), 
TEXT(MIN(ROUND(MOD(Total_Net_Sales_Price__c, 1), 2) * 100, 99)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Net Sales Price EUR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Net_Sales_Price__c</fullName>
        <label>Total Net Sales Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Product Lines Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Custom_Hierarchy_Line__c</columns>
        <columns>Description__c</columns>
        <columns>List_Price__c</columns>
        <columns>Net_Price__c</columns>
        <columns>Product_ID__c</columns>
        <columns>Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Product lines Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Lines Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>